--- a/gb/19/9/24/n11542773.md
+++ b/gb/19/9/24/n11542773.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sjbxxm276/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sjbxxm276/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/sjbxxm276/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sjbxxm276/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/sjbxxm276/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sjbxxm276/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/sjbxxm276/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sjbxxm276/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/sjbxxm276/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sjbxxm276/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/sjbxxm276/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sjbxxm276/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/sjbxxm276/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sjbxxm276/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/sjbxxm276/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sjbxxm276/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/sjbxxm276/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/sjbxxm276/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/sjbxxm276/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/sjbxxm276/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/sjbxxm276/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/sjbxxm276/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>移民移工大城需具备文化敏感度之精神医疗</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/09/39b395afb72256fb7f8c884638e546b7-600x400.jpg" />
 <h6>桃园疗养院指出，随着桃园人口族群变化，越来越多外籍移民移工至桃疗就诊。（桃园疗养院提供）
 </h6>
 <hr>
-<p>【大纪元2019年09月24日讯】（大纪元记者徐乃义台湾桃园报导）漫步桃园火车站街头，穿梭中坜工业区散步，如果您留心体察，会发现这是一个多元文化兼容并蓄的缤纷大城市！此起彼落的异乡语言，集结相伴之<ahref="https://github.com/sjbxxm276/djy/blob/master/gb/tag/%E5%A4%96%E7%B1%8D%E7%A7%BB%E5%B7%A5.md#1">外籍移工</a>，<ahref="https://github.com/sjbxxm276/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD%E7%96%97%E5%85%BB%E9%99%A2.md#1">桃园疗养院</a>一般精神科主治医师陈颂威指出，异乡莫漂泊，桃园市是移民移工大城，需具备文化敏感度之<ahref="https://github.com/sjbxxm276/djy/blob/master/gb/tag/%E7%B2%BE%E7%A5%9E%E5%8C%BB%E7%96%97.md#1">精神医疗</a>。</p>
-<p>根据内政部移民署2018年统计，“外籍移民”占全台总人口的1%～2%，六都中比例最高的是桃园市，<ahref="https://github.com/sjbxxm276/djy/blob/master/gb/tag/%E6%96%B0%E7%A7%BB%E6%B0%91.md#1">新移民</a>人口占总人口的2.73 %，新北市则有最多外籍移民，达10万人，台湾新移民原国籍最多为陆港澳，接着是越南、印尼、泰国、菲律宾等东南亚国家。台湾自1989年起引进“<ahref="https://github.com/sjbxxm276/djy/blob/master/gb/tag/%E5%A4%96%E7%B1%8D%E7%A7%BB%E5%B7%A5.md#1">外籍移工</a>”以补劳力密集产业之人力不足，劳动部统计显示外籍移工人数于2018年超过70万人。五都中移工人数最多是桃园市，超过11万人，移工最主要国籍为越南、印尼、菲律宾、泰国等东南亚国家。</p>
-<p><ahref="https://github.com/sjbxxm276/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD%E7%96%97%E5%85%BB%E9%99%A2.md#1">桃园疗养院</a>指出，随着桃园人口族群变化，越来越多外籍移民移工至桃疗就诊。陈颂威分享两个案例经验，三十四岁男性印尼移工，因气愤破坏商店物品与店员肢体冲突，被送至桃疗急诊室，个案经评估有躁症与暴力倾向，收治病房住院。住院期间，个案数次欲握手道歉，不久却突然暴怒攻击对方；医疗团队尝试了解之，印尼人如果表达道歉，对方基于礼貌应表示原谅他。此行为的解释，一方面因躁症之情绪不稳，另一方面可能个案因文化背景感到挫折愤怒，他曾数次拒绝食物；经了解原来印尼人认为左手给予食物是不洁的，工作人员遂避免之。</p>
+<p>【大纪元2019年09月24日讯】（大纪元记者徐乃义台湾桃园报导）漫步桃园火车站街头，穿梭中坜工业区散步，如果您留心体察，会发现这是一个多元文化兼容并蓄的缤纷大城市！此起彼落的异乡语言，集结相伴之<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%A4%96%E7%B1%8D%E7%A7%BB%E5%B7%A5.md#1">外籍移工</a>，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD%E7%96%97%E5%85%BB%E9%99%A2.md#1">桃园疗养院</a>一般精神科主治医师陈颂威指出，异乡莫漂泊，桃园市是移民移工大城，需具备文化敏感度之<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%B2%BE%E7%A5%9E%E5%8C%BB%E7%96%97.md#1">精神医疗</a>。</p>
+<p>根据内政部移民署2018年统计，“外籍移民”占全台总人口的1%～2%，六都中比例最高的是桃园市，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%B0%E7%A7%BB%E6%B0%91.md#1">新移民</a>人口占总人口的2.73 %，新北市则有最多外籍移民，达10万人，台湾新移民原国籍最多为陆港澳，接着是越南、印尼、泰国、菲律宾等东南亚国家。台湾自1989年起引进“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%A4%96%E7%B1%8D%E7%A7%BB%E5%B7%A5.md#1">外籍移工</a>”以补劳力密集产业之人力不足，劳动部统计显示外籍移工人数于2018年超过70万人。五都中移工人数最多是桃园市，超过11万人，移工最主要国籍为越南、印尼、菲律宾、泰国等东南亚国家。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD%E7%96%97%E5%85%BB%E9%99%A2.md#1">桃园疗养院</a>指出，随着桃园人口族群变化，越来越多外籍移民移工至桃疗就诊。陈颂威分享两个案例经验，三十四岁男性印尼移工，因气愤破坏商店物品与店员肢体冲突，被送至桃疗急诊室，个案经评估有躁症与暴力倾向，收治病房住院。住院期间，个案数次欲握手道歉，不久却突然暴怒攻击对方；医疗团队尝试了解之，印尼人如果表达道歉，对方基于礼貌应表示原谅他。此行为的解释，一方面因躁症之情绪不稳，另一方面可能个案因文化背景感到挫折愤怒，他曾数次拒绝食物；经了解原来印尼人认为左手给予食物是不洁的，工作人员遂避免之。</p>
 <p>另一个四十二岁女性越南移民，嫁来台湾15年，她因各种身体不适（胸闷、心悸、头痛、头晕、腹痛、疲倦）在各大医院就诊却找不出身体疾病原因，转到桃疗初诊详细评估后，诊断忧郁症与心理社会压力（婆媳关系及文化适应），个案经治疗后心情与身体症状皆改善，医疗人员也学到越南人有心情之身体化倾向，与上一代华人相似，需要深层倾听身体症状背后的心理状态。◇</p>
 <p>责任编辑：昌英</p>
 
@@ -16,42 +16,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/16/12/12/n8584262.md#1">归化10年才能参选 台新移民：被当二等公民</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/18/11/13/n10848985.md#1">台韩精神医疗研讨会  分享心理健康营造</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/19/1/9/n10963029.md#1">桃园推移工参与式预算计划  保障外籍移工安全</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/19/5/13/n11253792.md#1">关怀外籍移工  桃园外籍移工免费健康检查</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/19/6/16/n11325962.md#1">感谢外籍移工贡献 移民署为百民渔工健诊</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/19/8/22/n11469809.md#1">新南向政策国际精神医疗训练  桃疗一步一脚印</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/19/9/23/n11539893.md#1">新移民学生第一年可免英语州考</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/20/3/26/n11976534.md#1">加强防疫 中大例假日车辆实施“总量管制”</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/20/3/26/n11976526.md#1">课本没教 桃园创意翻转哲学引领教育新潮流</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/20/3/26/n11976221.md#1">桃议员：道路分期分段施工  骑楼空间整平</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/12/12/n8584262.md#1">归化10年才能参选 台新移民：被当二等公民</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/11/13/n10848985.md#1">台韩精神医疗研讨会  分享心理健康营造</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/9/n10963029.md#1">桃园推移工参与式预算计划 保障外籍移工安全</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/5/13/n11253792.md#1">关怀外籍移工 桃园外籍移工免费健康检查</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/6/16/n11325962.md#1">感谢外籍移工贡献 移民署为百民渔工健诊</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/8/22/n11469809.md#1">新南向政策国际精神医疗训练  桃疗一步一脚印</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/9/23/n11539893.md#1">新移民学生第一年可免英语州考</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615834.md#1">桃园妇女节“1看、2听、3享受”活动</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615865.md#1">幼儿溜达于车道找妈 女警google助返家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615871.md#1">桃园新增2例匡列居隔确诊 呼吁预约公费疫苗</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/23/n10420942.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（一）</a></li><li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/29/n11287543.md#1" target="_blank">纽约市七位市议员祝贺法轮大法日</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/28/n10879954.md#1" target="_blank">林辉：共产党国家的“作秀公审”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/11/n11105711.md#1" target="_blank">内蒙那达慕大会的无敌手 劫后遇佛缘</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/20/3/24/n11971400.md#1">最新翻墙软件 突破封锁访问大纪元新唐人</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/20/3/24/n11970667.md#1">任志强视频热传 批中共体制烂透 吁国人推墙</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/20/3/25/n11972610.md#1">6万武汉人封城前外逃 路线与欧美疫情吻合？</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/20/3/25/n11972094.md#1">捂不住了 大陆金融系统至少千人染中共病毒</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/20/3/25/n11974512.md#1">【新闻看点】习将出席G20峰会 国际问责不断</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/20/3/25/n11973180.md#1">辛龙憔悴赴灵堂 瞒着女儿说：妈妈去旅行了</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/20/3/25/n11973870.md#1">辛龙灵堂伴妻5小时 双手合十离开未受访</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/20/3/24/n11969412.md#1">刘真灵堂预计25日开放 追思会下月举行</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/20/3/24/n11971575.md#1">宣传新片时自称亚裔 刘亦菲遭大陆网民骂翻</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/20/3/23/n11967623.md#1">晒合照悼念刘真 翁虹：遗憾无法实现舞林之约</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/20/3/22/n11962482.md#1">《推背图》第7象归序 谈庚子流年</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/20/3/23/n11967225.md#1">成规模毁灭事件中的悬案 明朝王恭厂大爆炸</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】上帝之鞭：欧洲黑死病</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/20/3/24/n11969439.md#1">中国古代的“飞天”舞蹈家</a></li>
-<li><a href="https://github.com/sjbxxm276/djy/blob/master/gb/20/3/24/n11970004.md#1">老僧从冥府归来 传信给行恶的官员们</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614701.md#1">【新闻看点】惨烈堪比铁链女 陕西有个铁笼女</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/sjbxxm276/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/sjbxxm276/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/24/n11542773.htm">移民移工大城需具备文化敏感度之精神医疗</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/24/n11542773.htm">移民移工大城需具备文化敏感度之精神医疗</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/sjbxxm276/djy/blob/master/gb/19/9/24/n11542773.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/sjbxxm276/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/sjbxxm276/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sjbxxm276/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sjbxxm276/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjbxxm276/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/9/24/n11542773.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
